[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/menu.gd" type="Script" id=1]
[ext_resource path="res://SFX/changeSwitch.wav" type="AudioStream" id=2]
[ext_resource path="res://SFX/Select.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/IdeaMenuBack.png" type="Texture" id=4]
[ext_resource path="res://Assets/IdeaMenuBack2.png" type="Texture" id=5]
[ext_resource path="res://Assets/IdeaMenuBack4.png" type="Texture" id=6]
[ext_resource path="res://Assets/IdeaMenuBack3.png" type="Texture" id=7]
[ext_resource path="res://Scenes/options.tscn" type="PackedScene" id=8]
[ext_resource path="res://SFX/clickChoose.wav" type="AudioStream" id=9]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 4
fps = 10.0
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 7 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 6 )
frame_3/delay_sec = 0.0

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.437
anchor_top = 0.533
anchor_right = 0.564
anchor_bottom = 0.72
margin_left = 0.511993
margin_top = 0.199799
margin_right = 0.463867
margin_bottom = -19.9998
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewGame" type="Button" parent="VBoxContainer"]
margin_right = 129.0
margin_bottom = 20.0
text = "New Game"

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 129.0
margin_bottom = 44.0
text = "Continue"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 129.0
margin_bottom = 68.0
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 129.0
margin_bottom = 92.0
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 129.0
margin_bottom = 116.0
text = "Quit "

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Options" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 0.9

[node name="changeSwitch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="clickChoose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="mouse_entered" from="VBoxContainer/NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Continue" to="." method="_on_Continue_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
